vendor/vendor/github.com/richardlehane/webarchive/examples/jhove/invalid/invalid-warcfile-lonely-revisit.warc
WARC/1.0
WARC-Type: revisit



